# pbwt

./: .gitignore  .nojekyll  CMakeLists.txt  Makefile  README.md  index.html  robots.txt  search.json  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy-quarto.yml
blog/: _quarto.yml  index.qmd  styles.css
blog/assets/: bibliography.bib  references.bib  theme-dark.scss  theme.scss
blog/docs/: index.html  search.json
blog/docs/posts/: references.html  summary.html
blog/docs/posts/pbwt-core/: algorithm_12.html  algorithm_23.html  algorithm_24.html  algorithm_25.html
blog/docs/site_libs/bootstrap/: bootstrap-76f60892d75a1463dcaf9797a598c376.min.css  bootstrap-dark-8d802c07b596f2a99f27680d5a8550c0.min.css
blog/posts/: introduction.qmd  summary.qmd
blog/posts/pbwt-core/: algorithm_1.qmd  algorithm_12.qmd  algorithm_2.qmd  algorithm_23.qmd  algorithm_24.qmd  algorithm_25.qmd  algorithm_3.qmd  algorithm_4.qmd  algorithm_5.qmd  index.qmd
include/: pbwtMain.h  version.h.in
posts/: introduction.html  summary.html
posts/pbwt-core/: algorithm_12.html  algorithm_23.html  algorithm_24.html  algorithm_25.html
site_libs/bootstrap/: bootstrap-b067882eea6cfda720526a955df8977d.min.css  bootstrap-dark-7921ce03f2cd29c505a5247768a328bb.min.css  bootstrap-dark-bec7cbc3933862984366e7801c579a4a.min.css  bootstrap-e938042b3e081363dfdc5586c75eecf4.min.css
src/: main.c  pbwtCore.c  pbwtGeneticMap.c  pbwtHtslib.c  pbwtIO.c  pbwtMain.c  pbwtMerge.c
study/: PBWT.py  algorithm_1.py  algorithm_23.py  algorithm_24.py  algorithm_25.py  algorithm_4.py
test/: CMakeLists.txt  test_run.c
tests/: CMakeLists.txt  test_run.cpp
tests/data/: OMNI.pbwt  OMNI.vcf.gz.tbi  query_OMNI.pbwt  query_OMNI.vcf  query_OMNI.vcf.gz.tbi  sub_get_query.sh
